content/_generated-doc/2.7/config/quarkus-resteasy-vertx-resteasy-vertx-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy-vertx-resteasy-vertx-config_configuration]]link:#quarkus-resteasy-vertx-resteasy-vertx-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-vertx-resteasy-vertx-config_quarkus.resteasy.vertx.response-buffer-size]]`link:#quarkus-resteasy-vertx-resteasy-vertx-config_quarkus.resteasy.vertx.response-buffer-size[quarkus.resteasy.vertx.response-buffer-size]`

[.description]
--
The size of the output stream response buffer. If a response is larger than this and no content-length is provided then the request will be chunked. Larger values may give slight performance increases for large responses, at the expense of more memory usage.
--|int 
|`8191`

|===